# koffee-tray

./: .gitignore  Cargo.toml  README.md  build.rs  release.toml
assets/: off_dark.xcf  off_light.xcf  on_dark.xcf  on_light.xcf
src/: dpms_inhibitor.rs  inhibitors.rs  main.rs  screen_saver_inhibitor.rs  tray.rs
