[package]
name = "koffee-tray"
version = "0.1.5-dev"
authors = ["dpredovic <dpredovic@gmail.com>"]
edition = "2021"
build = "build.rs"
description = "A very lightweight Caffeine replacement, written in Rust"
homepage = "https://github.com/dpredovic/koffee-tray"
repository = "https://github.com/dpredovic/koffee-tray"
license = "GPL"
publish = false

[profile.release]
lto = true
strip = true
opt-level = "z"

[dependencies]
ksni = "^0.2.0"
dbus = "^0.9.7"
log = "^0.4.17"
syslog = "^6.1.0"
simple_logger = "^4.1.0"
anyhow = "^1.0.71"
rust-embed = { version = "^6.6.1", features = ["interpolate-folder-path"] }
clap = { version = "^4.2.5", features = ["derive"] }
get-shell = "^0.1.0"

[build-dependencies]
xcf = "^0.4.0"
